--- a/app/components/chat/style.module.css
+++ b/app/components/chat/style.module.css
@@ -19,7 +19,8 @@
 
 
 .questionIcon {
-  background: url(./icons/default-avatar.jpg);
+  /* background: url(./icons/default-avatar.jpg); */
+  background: url(./icons/touxiang.png);
   background-size: contain;
   border-radius: 50%;
 }
