feat：新增环境变量

--- a/app/components/welcome/style.module.css
+++ b/app/components/welcome/style.module.css
@@ -22,6 +22,7 @@
 }
 
 .logo {
+  /* display: none; */
   width: 48px;
   height: 20px;
   background: url(./icons/logo.png) center center no-repeat;
